--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,12 @@ services:
   - type: web
     name: myjournal
     env: python
+    region: singapore
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
+    envVars:
+      - key: SECRET_KEY
+        generateValue: true
+      - key: PYTHON_VERSION
+        value: 3.11.0
